--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   </head>
   <body>
     <div class="navbar">
+      <div class="logo">
+        <i class="fa-solid fa-a"></i>
+      </div>
       <ul>
         <li>
           <a href="#ho">
