--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <body>
     <div class="navbar">
       <div class="logo">
-        <i class="fa-solid fa-a"></i>
+        <a href="#ho">
+          <img src="imgs/1.jpg" alt="My Img Is Not Available" />
+        </a>
       </div>
       <ul>
         <li>
