--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
             <a href="https://ayman-121.github.io/dashboard/" target="_blank"
               >View Template 14</a
             >
+            <a href="https://ayman-121.github.io/QQQ/" target="_blank"
+              >View Template 15</a
+            >
             <span id="next" class="next">
               <i class="fa-solid fa-angle-right"></i>
             </span>
