--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="name-section" id="ho">
         <div class="container">
           <h1>AYMAN Mohammad</h1>
-          <p>Front-End-Developer</p>
+          <p>Full-Stack-Developer</p>
         </div>
       </div>
       <div class="about" id="ab">
@@ -72,7 +72,7 @@
         <div class="container">
           <h1>I am Ayman</h1>
           <p>
-            I am Ayman Mohammad 13 years old a Front-End-Developer with these
+            I am Ayman Mohammad 15 years old a Full-Stack-Developer with these
           </p>
           <ul>
             <a href="#">
@@ -86,6 +86,18 @@
             </a>
             <a href="#">
               <li>JavaScript</li>
+            </a>
+             <a href="#">
+              <li>React</li>
+            </a>
+             <a href="#">
+              <li>Python</li>
+            </a>
+             <a href="#">
+              <li>Flask</li>
+            </a>
+             <a href="#">
+              <li>SQLite</li>
             </a>
             <a href="#">
               <li>Bootstrap</li>
