--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="navbar">
       <div class="logo">
         <a href="#ho">
-          <img src="imgs/2.jpg" alt="My Img Is Not Available" />
+          <img src="" alt="My Img Is Not Available" />
         </a>
       </div>
       <ul>
