--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container">
           <h1>I am Ayman</h1>
           <p>
-            I am Ayman Mohammad 15 years old a Full-Stack-Developer with these
+            I am Ayman Mohammad 15 years old a Full-Stack-Developer knowing the following programming languages and major frameworks
           </p>
           <ul>
             <a href="#">
