--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <div class="main">
       <div class="name-section" id="ho">
         <div class="container">
-          <h1>AYMAN Mohammad <small>This website wasn't updated from 2021</small></h1>
-          <p>Full-Stack-Developer<small>My new Website will be online soon</small></p>
+          <h1>AYMAN Mohammad </h1>
+          <p>Full-Stack-Developer<br><small>This website wasn't updated from 2021</small><br><small>My new Website will be online soon</small></p>
         </div>
       </div>
       <div class="about" id="ab">
