--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="name-section" id="ho">
         <div class="container">
           <h1>AYMAN Mohammad </h1>
-          <p>Full-Stack-Developer<br><small>This website wasn't updated from 2021</small><br><small>My new Website will be online soon</small></p>
+          <p>Full-Stack-Developer<br><small>This website wasn't updated from 2021</small><br><small>My new Website is: <a href="https://ayman-121.github.io/me-v2/"></a></small></p>
         </div>
       </div>
       <div class="about" id="ab">
